# gcs-core

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
gcs_core/: __init__.py  data.py  eval_common.py  metrics.py  synth_loader.py  utils.py  val_common.py
gcs_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gcs_core/schemas/: eval_summary.schema.json
