
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gcs-core"
version = "0.1.0"
description = "Core evaluation/data utilities for GenCyberSynth"
authors = [{name="GenCyberSynth"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
