# gcs-core/pyproject.toml

[build-system]
# Setuptools 61+ supports PEP 621 (project table). Wheel is standard for builds.
requires = ["setuptools>=78", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcs-core"                               # import is gcs_core
version = "0.1.0"
description = "Core evaluation and data utilities for GenCyberSynth"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"                                 # SPDX expression (preferred)
authors = [{ name = "GenCyberSynth" }]
keywords = ["evaluation", "metrics", "generative-models", "gencys"]

# Avoid deprecated license classifiers that caused errors earlier.
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

# Keep runtime deps minimal; add here only if the *library* needs them.
dependencies = []

[project.urls]
Homepage = "https://example.com/gcs-core"
Source = "https://example.com/gcs-core"

[tool.setuptools]
# Flat layout (no `src/`). Auto-discover top-level package.
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gcs_core*"]
exclude = ["tests*"]
namespaces = false
